# bastion-scan

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security_headers.py
backend/app/models/: schemas.py
backend/app/parsers/: __init__.py  base.py  npm.py  pypi.py
backend/app/services/: __init__.py  ai_service.py  fixer.py  osv_client.py
backend/tests/: test_ai_service.py  test_fixer.py  test_osv_client.py  test_parsers.py  test_routes.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: FileUpload.tsx  FixedFileDownload.tsx  ScanErrorState.tsx  ScanProgress.tsx  ScanReport.tsx  VulnerabilityCard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts  manifest.ts  severity.ts  utils.ts
frontend/src/types/: scan.ts
